# KiBotOne

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
docs/: index.html
src/kibot_one_control/: package.xml  setup.cfg  setup.py
src/kibot_one_control/kibot_one_control/: cmd_vel_watchdog.py  control_console.py  flag_pose_publisher.py  follow_controller.py  keyboard_teleop.py  mode_control.py
src/kibot_one_control/launch/: control_console.launch.py  follow_phase1.launch.py  follow_phase2.launch.py
src/kibot_one_control/test/: test_flake8.py
src/kibot_one_interface/: CMakeLists.txt  package.xml
src/kibot_one_interface/msg/: Mode.msg  ModeState.msg
src/kibot_one_interface/srv/: Mode.srv
src/kibot_one_sim/: CMakeLists.txt  package.xml
src/kibot_one_sim/config/: ros_gz_bridge.yaml
src/kibot_one_sim/launch/: gazebo.launch.py  kibot_one.launch.py  sim_with_bridge.launch.py
src/kibot_one_sim/models/follow_flag/: model.config  model.sdf
src/kibot_one_sim/models/kibot_one_base/: model.config  model.sdf
src/kibot_one_sim/worlds/: kibot_one.world.sdf  kibot_one_obstacles.world.sdf
