[project]
name = "kibotone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "catkin-pkg>=1.1.0",
    "empy>=4.2.1",
    "lark>=1.3.1",
    "numpy>=2.4.3",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]

[tool.mypy]
exclude = '(^|/)(build|install|log|__pycache__)(/|$)'
