<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kibot_one_control</name>
  <version>0.0.0</version>
  <description>机器人核心逻辑</description>
  <maintainer email="2094901072@qq.com">jese--ki</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>kibot_one_interface</depend>
  <depend>kibot_one_sim</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
